<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    
    <RelativeLayout 
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:background="#59B0D6">
        <TextView
            android:id="@+id/tv_title"
            android:text="@string/title_settings"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:layout_height="45dp"
            android:layout_width="wrap_content"
            android:gravity="center"
            ></TextView>
        
        
    </RelativeLayout>

    <TextView 
        android:id="@+id/tv_settings_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@+id/rl_title_bar"
        android:textSize="17sp"
        android:textColor="#222"
        android:text="@string/settings_info"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_no_cert"
        android:orientation="vertical"
        android:layout_below="@+id/tv_settings_info"
        android:layout_margin="20dp">
        
        <TextView
            android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:textColor="#000"
        	android:textSize="15sp"
        	android:text="@string/settings_no_cert"
        	/>
        
        <Button
	        android:id="@+id/btn_cert"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/cert_button"
	        style="@android:style/Widget.Holo.Button"
	        android:layout_marginTop="10dp"
	        />
    
        
    </LinearLayout>
    
    
    <TextView
        android:id="@+id/tv_cert_don"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/settings_cert_done"
        android:textColor="#000"
       	android:textSize="15sp"
        android:layout_below="@+id/tv_settings_info"
        android:layout_margin="20dp"
		/> 
    
    
    
    <LinearLayout 
        	android:id="@+id/ll_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
       		android:layout_alignParentLeft="true"
       		android:baselineAligned="false">
            
            <LinearLayout 
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/btn_info"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@drawable/btn_info"
                    android:layout_gravity="center_horizontal|center_vertical">
                    
                </Button>
                
                
            </LinearLayout>
            <LinearLayout 
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                
                
                
                <Button
                    android:id="@+id/btn_list"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@drawable/btn_list"
                    android:layout_gravity="center_horizontal|center_vertical">
                    
                </Button>
                
                
            </LinearLayout>
            <LinearLayout 
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                
                
                <Button
                    android:id="@+id/btn_bookmark"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@drawable/btn_bookmark"
                    android:layout_gravity="center_horizontal|center_vertical">
                    
                </Button>
                
            </LinearLayout>
            <LinearLayout 
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
               <ImageView
                    
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@drawable/btn_settings_push"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:contentDescription="@string/desc">
                    
                </ImageView>
                
            </LinearLayout>
            
            
            
    </LinearLayout>
        
        
    
    
</RelativeLayout>
